Fixed home page divs hugging left or right side of page on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -815,33 +815,6 @@ p > tag {
     background: #f39c12;
 }
 
-
-
-@media screen and (max-width: 400px) {
-
-#db .col-lg-2 {
-	padding-left: 20%;
-}
-
-}
-
-@media screen and (min-width: 401px) and (max-width: 700px) {
-
-#db .col-lg-2 {
-	padding-left: 30%;
-}
-
-}
-
-@media screen and (min-width: 700px) and (max-width: 1100px) {
-
-#db .col-lg-2 {
-	padding-left: 30%;
-}
-
-}
-
-
 /*  --- new ---- */
 
 @media (max-width: 700px) {
@@ -860,6 +833,14 @@ div.shadow {
 	padding: 10px;
 	background: #777777;
 	}
+
+@media (max-width: 700px) {
+	div.shadow {
+		width: 100%;
+		margin: 0;
+		margin-bottom: 10px;
+	}
+}
 
 @media (min-width: 1200px) {
 	div #top-div-mid{
